# vectorworks_plugin_import_ifc_homeskz

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: test.yml
src/vectorworks_plugin_import_ifc_homeskz/: __init__.py  document.py  grid.py  member.py  story.py
src/vectorworks_plugin_import_ifc_homeskz/ifc/: __init__.py  column.py  column_mark.py  floor_post.py  footing.py  grid.py  loader.py  member.py  rebar.py  reinforcement.py  roof.py  section.py  sheet.py  story.py  structural_class.py
src/vectorworks_plugin_import_ifc_homeskz/vw/: __init__.py  column.py  floor.py  footing.py  grid.py  member.py  rafter.py  rebar.py  roof.py  sheet.py  story.py
tests/: conftest.py  test_document.py  test_grid.py  test_ifc_column.py  test_ifc_column_mark.py  test_ifc_floor.py  test_ifc_floor_post.py  test_ifc_footing.py  test_ifc_grid.py  test_ifc_joint.py  test_ifc_loader.py  test_ifc_member.py  test_ifc_rafter.py  test_ifc_rebar.py  test_ifc_reinforcement.py  test_ifc_section.py  test_ifc_sheet.py  test_ifc_story.py  test_ifc_structural_class.py  test_ifc_tag.py  test_init.py  test_integration.py  test_member.py  test_story.py  test_vw_column.py  test_vw_execute.py  test_vw_footing.py  test_vw_grid.py  test_vw_member.py  test_vw_rebar.py  test_vw_roof.py  test_vw_sheet.py  test_vw_story.py
tests/fixtures/: README.md
tools/: dump_pillar_fields.py
