[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vectorworks-plugin-import-ifc-homeskz"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["ifcopenshell"]

[project.optional-dependencies]
test = ["pytest>=7", "pytest-cov>=4", "mypy>=1.8"]

[tool.setuptools.package-dir]
"" = "src"

[tool.mypy]
python_version = "3.9"
files = ["src", "tests", "main.py"]
mypy_path = ["src"]
# VectorWorks 公式 vs.py スタブは生成物で型注釈を持たないため除外する
exclude = 'tests/vs\.py'
# すべての関数に型注釈を必須とする（テストコード含む）
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
# vs モジュールは VectorWorks 内蔵 API のため型スタブが存在しない
ignore_missing_imports = true
